# argentum

./: Cargo.toml  README.md  glossary.md
.github/workflows/: code_quality_checks.yml  rust.yml
argentum_game_coordinate_system/: Cargo.toml
argentum_game_coordinate_system/src/: coordinate.rs  errors.rs  lib.rs  prelude.rs
argentum_game_data_structures/: Cargo.toml
argentum_game_data_structures/src/: lib.rs  ndarray.rs  prelude.rs
crates/argentum_game_coordinate_system/: Cargo.toml
crates/argentum_game_data_structures/: Cargo.toml
crates/argentum_game_world_data/: Cargo.toml
lib/argentum_game_coordinate_system/src/: errors.rs
lib/argentum_game_coordinate_system_macros/: Cargo.toml
lib/argentum_game_data_structures/: Cargo.toml
lib/argentum_game_data_structures/src/: ndarray.rs
lib/argentum_game_voxel/: Cargo.toml
lib/argentum_game_world_data/src/coordinates/: chunk_coords.rs  local_coords.rs
lib/argentum_game_world_data/src/world_data/: chunk.rs
lib/argentum_game_world_generator/: Cargo.toml
src/: coordinates.rs  lib.rs  main.rs  world.rs
src/coordinates/: chunk.rs  global.rs  local.rs
src/world/: chunk.rs  cube.rs  mod.rs  voxel.rs
src/world/chunk/: errors.rs
src/world/voxel/: errors.rs
