[package]
name = "argentum_game"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
bevy = "0.14.1"
ndarray = "0.16.0"
quickcheck = "1.0.3"

[workspace]
resolver = "2"
members = [
  "crates/argentum_game_voxel",
  "crates/argentum_game_coordinate_system",
  "crates/argentum_game_world_generator",
  "crates/argentum_game_world_data",
  "crates/argentum_game_data_structures",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
