[workspace.package]
license = "AGPL-3.0-or-later"
edition = "2021"

[workspace]
resolver = "2"
members = [
    "bin/argentum_game",
    "lib/argentum_game_voxel",
    "lib/argentum_game_coordinate_system",
    "lib/argentum_game_world_generator",
    "lib/argentum_game_world_data",
    "lib/argentum_game_data_structures",
]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.test]
opt-level = 0

[profile.test.package."*"]
opt-level = 0
