[package]
name = "argentum_game_coordinate_system"
description = "Argentum: Coordinate System"
version = "0.8.2"
edition.workspace = true
license.workspace = true

[dependencies]
argentum_game_coordinate_system_macros = "0.1.0"
min_max_traits = "0.1.0"
num = "0.4.3"
quickcheck = { version = "1.0.3", default-features = false }
thiserror = "1.0.63"
