[package]
name = "argentum_game_world_data"
description = "Argentum: World Data"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
argentum_game_voxel = "0.1.0"
argentum_game_coordinate_system = "0.3.0"
quickcheck = { version = "1.0.3", default-features = false }
dashmap = "6.0.1"
ndarray = "0.16.1"
