[package]
name = "argentum_game_data_structures"
description = "Argentum: Data Structures"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
argentum_game_voxel = "0.1.0"
argentum_game_coordinate_system = "0.8.2"
ndarray = "0.16.1"
quickcheck = { version = "1.0.3", default-features = false }
