[package]
name = "argentum_game_world_generator"
description = "Argentum: World Generator"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
argentum_game_voxel = { path = "../argentum_game_voxel" }
argentum_game_coordinate_system = { path = "../argentum_game_coordinate_system" }
ndarray = "0.16.1"
quickcheck = { version = "1.0.3", default-features = false }
